<resources>
    <string name="app_name">polirooms</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_verifiying_process">verifiying_process</string>
    <string name="title_activity_reg_select_type_of_user">reg_select_type_of_user</string>
    <string name="title_activity_reg_take_picture">reg_take_picture</string>
    <string name="title_activity_reg_select_picture">reg_select_picture</string>
    <string name="title_activity_reg_verifying_message">reg_verifying_message</string>
    <string name="title_activity_dashboard_arrendador">dashboard_arrendador</string>
    <string name="title_activity_dashboard_huesped">dashboard_huesped</string>
    <string name="polirooms_logo">Logotipo de Polirooms</string>
    <string name="login_welcome">Ingresa a la app</string>
    <string name="login_username">Nombre de Usuario o Correo</string>
    <string name="login_password">Contraseña</string>
    <string name="login_register">¿Aún no estas registrado? <b>Registrate</b></string>
    <string name="login_log">Ingresar</string>
    <string name="register_title">Registro</string>
    <string name="register_user_types">¿Qué tipo de usuario eres?</string>
    <string name="txt_huesped">Huesped</string>
    <string name="txt_arrendador">Arrendador</string>
    <string name="form_huesped_tittle">Registro de Estudiante</string>
    <string name="form_huesped_name">Nombre(s)</string>
    <string name="form_huesped_second_name">Apellidos</string>
    <string name="form_huesped_email">Correo Electrónico</string>
    <string name="form_huesped_genre">Genero</string>
    <string name="form_huesped_genre_male">Masculino</string>
    <string name="form_huesped_genre_female">Femenino</string>
    <string name="form_huesped_genre_none">Prefiero No Especificar</string>
    <string name="form_huesped_age">Edad</string>
    <string name="form_huesped_ine">Adjuntar INE</string>
    <string name="form_huesped_idIPN">Adjuntar Credencial del IPN</string>
    <string name="form_huesped_why_info"><u>¿Por qué debo proporcionar estos datos?</u></string>
    <string name="form_huespd_next">Continuar</string>
    <string name="form_huesped_terms">Acepto los</string>
    <string name="form_huesped_conditions"><u>Términos y Condiciones</u></string>
    <string name="choose_image_camera_txt">Tomar Fotografía</string>
    <string name="choose_image_gallery_txt">Elegir de la Galería</string>

    <string name="form_arrendador_tittle">Registro de Arrendador</string>
    <string name="form_arrendador_name">Nombre(s)</string>
    <string name="form_arrendador_second_name">Apellidos</string>
    <string name="form_arrendador_email">Correo Electrónico</string>
    <string name="form_arrendador_genre">Genero</string>
    <string name="form_arrendador_genre_male">Masculino</string>
    <string name="form_arrendador_genre_female">Femenino</string>
    <string name="form_arrendador_genre_none">Prefiero No Especificar</string>
    <string name="form_arrendador_age">Edad</string>
    <string name="form_arrendador_ine">Adjuntar INE</string>
    <string name="form_arrendador_why_info"><u>¿Por qué debo proporcionar estos datos?</u></string>
    <string name="form_arrendador_next">Continuar</string>
    <string name="form_arrendador_terms">Acepto los</string>
    <string name="form_arrendador_conditions"><u>Términos y Condiciones</u></string>

    <string name="form_huesped_personality_instruction">Al terminar el test, presiona continuar.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonProfile">Perfil</string>
    <string name="labelBienvenida">¡Bienvenido de Nuevo!</string>
</resources>
