<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:weightSum="20"
    tools:context=".reg_husped_form">

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/form_huesped_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/txt_header_bgWhite"
        android:text="@string/form_huesped_tittle" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/form_huesped_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:ems="10"
        style="@style/txt_edit_bgWhite"
        android:inputType="textPersonName"
        android:hint="@string/form_huesped_name"
        android:text="" />

    <EditText
        android:id="@+id/form_huesped_second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:ems="10"
        style="@style/txt_edit_bgWhite"
        android:inputType="textPersonName"
        android:hint="@string/form_huesped_second_name"
        android:text="" />

    <EditText
        android:id="@+id/form_huesped_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:ems="10"
        style="@style/txt_edit_bgWhite"
        android:hint="@string/form_huesped_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/form_huesped_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:ems="10"
        style="@style/txt_edit_bgWhite"
        android:hint="@string/form_huesped_age"
        android:inputType="number" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/form_huesped_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/form_huesped_genre_tittle"
            style="@style/txt_small_guinda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_huesped_genre" />

        <RadioButton
            android:id="@+id/form_huesped_genre_opMale"
            style="@style/radio_button_bgWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_huesped_genre_male" />

        <RadioButton
            android:id="@+id/form_huesped_genre_opFemale"
            style="@style/radio_button_bgWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_huesped_genre_female" />

        <RadioButton
            android:id="@+id/form_huesped_genre_opNone"
            style="@style/radio_button_bgWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_huesped_genre_none" />
    </RadioGroup>

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/form_huesped_ine"
        style="@style/small_button_guinda"
        android:layout_gravity="center"
        android:text="@string/form_huesped_ine" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/form_huesped_ipn"
        style="@style/small_button_guinda"
        android:layout_gravity="center"
        android:text="@string/form_huesped_idIPN" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/form_huesped_whyInfo"
        android:textAlignment="center"
        android:layout_marginHorizontal="20dp"
        android:textSize="12sp"
        style="@style/txt_small_guinda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_huesped_why_info" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" >

        <CheckBox
            android:id="@+id/form_huesped_terms"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/form_huesped_terms"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:textStyle="italic|bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/form_huesped_conditions" />
    </TableRow>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/form_huesped_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        style="@style/big_button_guinda"
        android:text="@string/form_huespd_next" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>