<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:weightSum="20"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/polirooms_guinda" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login_header_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/txt_header_bgWhite"
        android:text="@string/login_welcome" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        style="@style/txt_edit_bgWhite"
        android:hint="@string/login_username"
        android:text=""
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/txt_edit_bgWhite"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/login_register" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:text="@string/login_log" />

    <Space
        android:layout_weight="17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>