<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context=".reg_select_type_of_user">


    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/register_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/txt_header_bgWhite"
        android:text="@string/register_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/register_choose_user_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:layout_weight="1"
        android:text="@string/register_user_types" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/register_huesped_button"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        style="@style/big_button_guinda"
        android:text="@string/txt_huesped" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/register_arrendador_button"
        android:layout_width="match_parent"
        style="@style/big_button_guinda"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        android:text="@string/txt_arrendador" />

    <Space
        android:layout_weight="19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>